test/error/ast/ExpectReturn.mod
MODULE ExpectReturn;
PROCEDURE P(): INTEGER;
BEGIN
  IF FALSE THEN RETURN 1 END;
END P;
END ExpectReturn.
